@@ -6,14 +6,14 @@ Author-email: twhitema at gmail com
 Home-page: http://twhiteman.netfirms.com/des.html
 Download-url: http://twhiteman.netfirms.com/pyDES/pyDes-2.0.1.zip
 Summary: Pure python implementation of DES and TRIPLE DES encryption algorithm
-License: Public Domain
+License: MIT
 Description: This algorithm is a pure python implementation of the DES and
         Triple DES algorithms. Triple DES is either DES-EDE3 with a
         24 byte key, or DES-EDE2 with a 16 byte key.
 Keywords: DES,TRIPLE-DES,ENCRYPTION,ALGORITHM,SECURITY
 Platform: All
 Classifier: Development Status :: 6 - Mature
-Classifier: License :: Public Domain
+Classifier: License :: MIT
 Classifier: Programming Language :: Python
 Classifier: Programming Language :: Python :: 2
 Classifier: Programming Language :: Python :: 3
