@@ -28,7 +28,7 @@
 	<tr><td>Download (Windows):</td><td> <a href="http://sourceforge.net/projects/pydes/files/pydes/2.0.1/pyDes-2.0.1.zip/download">pyDes-2.0.1.zip</a></td></tr>
 	<tr><td>Download (Unix):</td><td> <a href="http://sourceforge.net/projects/pydes/files/pydes/2.0.1/pyDes-2.0.1.tar.gz/download">pyDes-2.0.1.tar.gz</a></td></tr>
 	<tr><td>&nbsp;</td></tr>
-	<tr><td><b>License:</b></td><td>Free - Public Domain</td></tr>
+	<tr><td><b>License:</b></td><td>MIT</td></tr>
 	<tr><td><b>Source code:</b></td><td><a href="http://sourceforge.net/projects/pydes/">SourceForge: pyDes</a></td></tr>
 	<tr><td><b>Last updated:</b></td><td>28th April, 2010</td></tr>
 </table>
