@@ -1,3 +1,6 @@
+** 12th December 2011 **
+ Put on Github, use MIT license
+
 ** 28th April 2010 **
  Release: 2.0.1
  Fix triple des error when creating a CBC instance with no IV.
